--- a/package.json
+++ b/package.json
@@ -45,5 +45,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://github.com/choi-songyi/dart"
+  "homepage": "https://choi-songyi.github.io/dart/"
 }
