--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
     "bootstrap": "^4.6.0",
+    "dotenv": "^8.2.0",
     "gh-pages": "^3.1.0",
+    "google-maps-react": "^2.0.6",
     "install": "^0.13.0",
     "npm": "^7.5.2",
     "react": "^17.0.1",
